--- a/project/config/production/nginx/hrm.conf
+++ b/project/config/production/nginx/hrm.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    root /var/www/mvc_frame/public;
+    root /var/www/hrm/public;
     index index.php;
     charset utf-8;
     sendfile off;
