--- a/project/config/production/supervisor/queue_worker.conf
+++ b/project/config/production/supervisor/queue_worker.conf
@@ -1,5 +1,5 @@
 [program:queue_worker]
-command=/usr/bin/php /var/www/mvc_frame/public/cli.php queue:worker --tube=default --config_key=default --memory_limit=10485760
+command=/usr/bin/php /var/www/hrm/public/cli.php queue:worker --tube=default --config_key=default --memory_limit=10485760
 process_name=%(program_name)s_%(process_num)s
 numprocs=5
 stopwaitsecs=60
